# hunters_vs_wolves

./: .gitignore  CMakeLists.txt  license.md
include/: world.zachariahs.hunters_vs_wolves.character_perception.hpp  world.zachariahs.hunters_vs_wolves.character_types.hpp  world.zachariahs.hunters_vs_wolves.entity.hpp  world.zachariahs.hunters_vs_wolves.entity_type.hpp  world.zachariahs.hunters_vs_wolves.fitness_scores.hpp  world.zachariahs.hunters_vs_wolves.hunter_traits.hpp  world.zachariahs.hunters_vs_wolves.wolf_traits.hpp  world.zachariahs.hunters_vs_wolves.world.hpp
include/world.zachariahs.hunters_vs_wolves/: character_perception.hpp  character_types.hpp  entity.hpp  hunter_traits.hpp  vector2d.hpp  wolf_traits.hpp  world.hpp
include/world/zachariahs/hunters_vs_wolves/: character_perception.hpp  character_types.hpp  hunter_traits.hpp  vector2d.hpp  wolf_traits.hpp
src/: main.cpp
tests/: first_test.cpp
